--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="album_list_fragment_label">Album List</string>
-    <string name="photo_list_fragment_label">Photo Fragment</string>
+    <string name="photo_list_fragment_label">Photo List</string>
 
     <string name="content_description_photo">Photo</string>
 </resources>
